# konachan-wallpaper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  context.rs  konachan.rs  main.rs  utils.rs
