[package]
name = "konachan-wallpaper"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description= "download and set desktop wallpaper from konachan.net"
repository = "https://github.com/LuckyTurtleDev/konachan-wallpaper"
keywords = ["konachan", "desktop", "wallpaper", "background"]
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[dependencies]
adler = "1.0"
anyhow = "1.0.57"
clap = { version = "4", features = ["derive"] }
clap_complete = "3.1.3"
chrono = "0.4.22"
directories = "4.0.1"
evalexpr = "8.1"
more-wallpapers = { version = "0.1", features = ["rand", "wallpaper"] }
once_cell = "1.10.0"
open = "3"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5"
futures-util = "0.3.21"
